[package]
name = "async-convert"
version = "3.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/async-convert"
documentation = "https://docs.rs/async-convert"
description = "Async TryFrom/TryInto traits (TryFromAsync/TryIntoAsync)"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
